tests/e2e/semantics/obj_implicit_bool_int2.story
map_bool = {0: true}
map_int = {0: 0}
map_int = map_bool
